# vbaUnit

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/vba_unit/: __main__.py  vba_test_runner.py
tests/: test_testrunner.py
tests/Functional/: test_main.py  test_testrunner.py
tests/Unit/: test_testrunner.py
tests/src/VbaProject/: Module1.bas  Test_Boolean.bas
tests/testing/: Test_Boolean.bas
